--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,31 +5,31 @@ body {
   font-family: sans-serif;
 }
 
-.App {
+.app-container {
   text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
+  .app-logo {
+    animation: App-logo-spin infinite 20s linear;
+    height: 80px;
+  }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+  @keyframes App-logo-spin {
+    from { transform: rotate(0deg); }
+    to { transform: rotate(360deg); }
+  }
 
-.App-title {
-  font-size: 1.5em;
-}
+  .app-header {
+    background-color: #222;
+    height: 150px;
+    padding: 20px;
+    color: white;
+  }
 
-.App-intro {
-  font-size: large;
-}
+  .app-title {
+    font-size: 1.5em;
+  }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  .app-intro {
+    font-size: large;
+  }
 }
